@@ -146,13 +146,13 @@
 <td><p>solar azimuth angle</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>O3_column_number_density</strong></p></td>
-<td><p>int16</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[DU]</p></td>
 <td><p>O3 column number density</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>O3_column_number_density_uncertainty</strong></p></td>
-<td><p>int16</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[DU]</p></td>
 <td><p>uncertainty of the O3 column number density</p></td>
